form will behave correctly when addding data, e.g. textarea stretch, checklist additions, etc

--- a/src/todo-list.css
+++ b/src/todo-list.css
@@ -34,7 +34,7 @@ ul li {
 form {
   position: relative;
   width: 500px;
-  height: 700px;
+  height: 500px;
   margin: 0 auto;
   padding: 1em;
   box-sizing: border-box;
@@ -44,7 +44,7 @@ form {
   display: grid;
   grid-gap: 20px;
   grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 2em 2em 2em 2em 2em 3em;
+  grid-template-rows: 2em 1fr 2em 2em 1fr 3em 1fr 2em;
 }
 
 label {
@@ -54,12 +54,15 @@ label {
   font-size: 1.1rem;
 }
 
-
-
 output {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+textarea {
+  padding-left: 10px;
+  padding-top: 10px;
 }
 
 .newEleSpan {
@@ -73,6 +76,10 @@ output {
   cursor: pointer;
   transition: 0.3s;
   border-radius: 0;
+}
+
+.newEleSpan:hover {
+  background-color: #bbb;
 }
 
 .checklistInputContainer {
@@ -105,13 +112,34 @@ output {
   padding: 0;
 }
 
+.submitBtn {
+  grid-column-end: 3;
+
+  width: 100%;
+  background: #d9d9d9;
+  color: #555;
+  float: left;
+  text-align: center;
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: 0.3s;
+  border-radius: 0;
+}
+
+.submitBtn:hover {
+  background-color: #bbb;
+}
+
 .title {
   border: 1px solid black;
   border-radius: 4px;
 }
 
 .ulChecklist {
+  display: grid;
   grid-column-end: 3;
+
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .ulCLInput {
@@ -177,10 +205,4 @@ input {
   padding: 10px;
   float: left;
   font-size: 1.1rem;
-}
-
-/* Style the "Add" button */
-
-.newEleSpan:hover {
-  background-color: #bbb;
 }
